# v2_asbest-tool

./: .gitignore  AUDIT_RAPPORT_SLICE_3_FIXES.md  Dockerfile  Dockerfile.worker  RAILWAY_DEPLOYMENT_CHECKLIST.md  README-UI-DEPLOYMENT.md  README.md  SLICE6_TEST_PLAN.md  SLICE_3_COMPLETION.md  SLICE_4_PLAN.md  SLICE_5_TECHNICAL_DEBT.md  SLICE_8_IMPLEMENTATION.md  SLICE_8_STATUS_OVERVIEW.md  TECHNICAL_DEBT.md  activate_analysis_prompt.py  activate_professional_prompt.py  add_description_directly.py  alembic.ini  check_active_prompts.py  check_ai_results.py  create_test_pdf.py  debug_403_error.py  debug_ai_pipeline.py  debug_anthropic_api.py  debug_frontend_javascript.py  debug_mixed_content.py  debug_ui_user_creation.py  debug_user_creation_flow.py  docker-compose.yml  env.sample  mock_findings.json  performance_benchmark.py  pyproject.toml  railway-api.json  railway-worker.json  railway.json  realistic_findings.json  requirements.txt  run_description_migration.py  run_migration.py  (+138 more)
401/: README.md  test_correct_credentials.py
UI audit/: README.md  tenant-admin.html  user.html  user.py
alembic/: env.py
app/: config.py  database.py  exceptions.py  main.py
postman/: Admin Prompts.postman_collection.json
scripts/: seed.py
seeds/: CHECKLIST_Art22.json  analysis_art22_v1.md  analysis_v1.md  analysis_v1_improved.md  analysis_v2_professional.md  seed_prompts.py
tests/: conftest.py  conftest_slice6.py  test_auth.py  test_authorization.py  test_health.py  test_reports.py  test_slice4_processing.py  test_slice6_download.py  test_slice6_e2e.py  test_slice6_email.py  (+4 more)
(+88 files in other folders)
